gccida/g1/int_const_binop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_const_binop/src/fold-const.c:1985:24: error: must use 'enum' tag to refer to type 'tree_code'
tree  int_const_binop( tree_code code, tree arg1, tree arg2, int notrunc) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_const_binop/src/fold-const.c:2143:42: error: expected expression
if ( v8 && ( v13 & 8) == 0 && *( _OWORD *)&v11->block.vars != __PAIR128__( hi, *( ( unsigned __int64 *)&hi + 1)) ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_const_binop/src/fold-const.c:2143:34: error: use of undeclared identifier '_OWORD'
if ( v8 && ( v13 & 8) == 0 && *( _OWORD *)&v11->block.vars != __PAIR128__( hi, *( ( unsigned __int64 *)&hi + 1)) ) 
                                 ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/int_const_binop/src/obj/fold-const.o] Error 1
